Start import.js code

--- a/migration/mapping.json
+++ b/migration/mapping.json
@@ -22,13 +22,8 @@
   "mappings": {
     "restaurant": {
       "properties": {
-        "restaurant_id": {
-          "type": "integer"
-        },
-        "name": {
-          "type": "string",
-          "analyzer": "ngram_analyzer"
-        },
+        "restaurant_id": { "type": "integer" },
+        "name": { "type": "string", "analyzer": "ngram_analyzer" },
         "name_alphabet": {
           "type": "string",
           "analyzer": "ngram_analyzer"
