--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "bin/build.sh",
+    "start": "elasticsearch &",
+    "migrate": "bin/migrate.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/KamataRyo/elasticsearch-lesson/issues"
   },
-  "homepage": "https://github.com/KamataRyo/elasticsearch-lesson#readme"
+  "homepage": "https://github.com/KamataRyo/elasticsearch-lesson#readme",
+  "dependencies": {
+    "csvtojson": "^1.0.3",
+    "request": "^2.75.0"
+  }
 }
